﻿WolfTags - Change Log

======
Sigla:
+ enhancement, addition
- bug fix
. other development
======

0.0.2 - in development

+ added "if_children/unless_children" tags

0.0.1 - released 2010-10-03

+ added sample layout to demonstrate usage
+ included CHANGELOG file
. Wolf rebranding: edits, and file renames
. initial import/fork from Bastian Harendt's FrogTags <http://github.com/harendt/frog_tags>