@@ -9,7 +9,8 @@ Sigla:
 
 0.0.2 - in development
 
-+ added "if_children/unless_children" tags
++ Tags added: author; date; if_children/unless_children; 
+. documentation edits
 
 0.0.1 - released 2010-10-03
 
